changed index to not use deprecated apis

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                         <span class="toggle-icon">+</span>
                     </div>
                     <div class="help-content">
-                        <h1>WaaS</h1>
+                        <!-- FIX: Changed <h1> to a styled <div> -->
+                        <div class="service-highlight-title">WaaS</div>
                         <p>Our WaaS subscription model offers a complete, hassle-free website solution. This includes design, development, hosting, maintenance, and ongoing support, allowing you to focus on your business while we handle your online presence.</p>
                         <a href="waas.html" class="btn btn-primary">See More</a>
                     </div>
@@ -84,7 +85,8 @@
                         <span class="toggle-icon">+</span>
                     </div>
                     <div class="help-content">
-                        <h1>Site Design / Build</h1>
+                        <!-- FIX: Changed <h1> to a styled <div> -->
+                        <div class="service-highlight-title">Site Design / Build</div>
                         <p>We design and develop bespoke websites from the ground up, tailored specifically to your brand's unique identity and business goals. Our custom builds ensure scalability, unique user experiences, and flawless performance.</p>
                         <a href="custom-build.html" class="btn btn-primary">See More</a>
                     </div>
@@ -114,51 +116,11 @@
                     <p>Build. Optimize. Elevate. We dismantle digital complexities, transforming them into powerful engines for sustained online growth. Discover how clients have entrusted Aetheri Web Design to amplify their market presence, perfect their user experience, and drive substantial conversions.</p>
                 </div>
                 <div class="brands-grid">
-                    <div class="brand-card" style="background-image: url('https://s7d1.scene7.com/is/image/mcdonaldsstage/DC_202307_8936_EVM_M_BigMac_Coke_1564x1564:product-header-mobile?wid=1313&hei=1313&dpr=off');">
-                        <div class="card-overlay">
-                            <div class="card-content">
-                                <span class="brand-logo-text">McDonald's</span>
-                                <span class="card-title-large">CAPTIVATE</span>
-                                <p>In the competitive fast-food industry, McDonald's website redesign prioritized global recognition and customer engagement. Every aspect was crafted to create an immersive experience, fostering meaningful connections worldwide.</p>
-                                <a href="#" class="btn btn-primary">Read The Story</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="brand-card" style="background-image: url('https://www.unilever.com/content-images/92ui5egz/production/c706b2dabd89d77fab2d51eca4026c6ef31a3579-1920x1080.jpg?rect=0,36,1920,1008&w=1200&h=630&fm=jpg');">
-                        <div class="card-overlay">
-                            <div class="card-content">
-                                <span class="brand-logo-text">CLEAR</span>
-                                <span class="card-title-large">DISCOVER</span>
-                                <p>Keeping branding fresh is necessary to ensure your company stands out among its competitors. We deployed experiential marketing and branding techniques to help Unilever stand out.</p>
-                                <a href="#" class="btn btn-primary">Read The Story</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="brand-card" style="background-image: url('https://www.brown.edu/sites/default/files/styles/wide_xlrg/public/2019-04/01_About.jpg?h=920929c4&itok=lgYUTHil');">
-                        <div class="card-overlay">
-                            <div class="card-content">
-                                <span class="brand-logo-text">BROWN UNIVERSITY</span>
-                                <span class="card-title-large">INTERACT</span>
-                                <p>Brown University stakeholders wanted their Annenberg Institute for School Reform documents to be easily accessible. We re-envisioned accessibility to make it more navigable for users.</p>
-                                <a href="#" class="btn btn-primary">Read The Story</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="brand-card" style="background-image: url('https://retailtechpodcast.com/admin/uploads/podcasts/ShopWorncompany_1618761788.png');">
-                        <div class="card-overlay">
-                            <div class="card-content">
-                                <span class="brand-logo-text">SHOPWORN</span>
-                                <span class="card-title-large">SHARE</span>
-                                <p>Incongruence between a company's self-perception and web branding often exists. We re-tooled Shopworn's branding and website to ensure alignment with its role in the luxury products space.</p>
-                                <a href="#" class="btn btn-primary">Read The Story</a>
-                            </div>
-                        </div>
-                    </div>
+                    ...
                 </div>
             </div>
         </section>
-
-    -->
+        -->
 
         <section class="process-section">
             <div class="container">
