added descriptive text to links

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="service-description">
                     <p>Clients trust Aetheri Web Design to realize their business's online potential through our Digital Solutions.</p>
-                    <a href="services.html" class="btn btn-primary">Learn More</a>
+                    <a href="services.html" class="btn btn-primary">Learn more about our solutions</a>
                 </div>
             </div>
         </section>
@@ -64,31 +64,27 @@
             <div class="container">
                 <h2>HOW CAN WE HELP?</h2>
                 
-                <!-- UPDATED HELP ITEM 1 -->
                 <div class="help-item">
                     <div class="help-header">
                         <h3>Website as a Service (WaaS)</h3>
                         <span class="toggle-icon">+</span>
                     </div>
                     <div class="help-content">
-                        <!-- FIX: Changed <h1> to a styled <div> -->
                         <div class="service-highlight-title">WaaS</div>
                         <p>Our WaaS subscription model offers a complete, hassle-free website solution. This includes design, development, hosting, maintenance, and ongoing support, allowing you to focus on your business while we handle your online presence.</p>
-                        <a href="waas.html" class="btn btn-primary">See More</a>
+                        <a href="waas.html" class="btn btn-primary">See more about WaaS</a>
                     </div>
                 </div>
 
-                <!-- UPDATED HELP ITEM 2 -->
                 <div class="help-item">
                     <div class="help-header">
                         <h3>Custom Site Build</h3>
                         <span class="toggle-icon">+</span>
                     </div>
                     <div class="help-content">
-                        <!-- FIX: Changed <h1> to a styled <div> -->
                         <div class="service-highlight-title">Site Design / Build</div>
                         <p>We design and develop bespoke websites from the ground up, tailored specifically to your brand's unique identity and business goals. Our custom builds ensure scalability, unique user experiences, and flawless performance.</p>
-                        <a href="custom-build.html" class="btn btn-primary">See More</a>
+                        <a href="custom-build.html" class="btn btn-primary">See more about Site Build</a>
                     </div>
                 </div>
                 
