added meta descriptions to all internal pages

--- a/waas.html
+++ b/waas.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Aetheri Web Design WaaS Page">
     <title>Website as a Service (WaaS) - Aetheri Web Design</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
