added centralized blog post data to make featured post to be the most recent

--- a/blog.html
+++ b/blog.html
@@ -46,20 +46,20 @@
 
     <main>
         <section class="featured-post-section">
-            <div class="container">
-                <div class="featured-post-layout">
-                    <div class="featured-image">
-                        <img src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Code on a screen">
-                    </div>
-                    <div class="featured-content">
-                        <span class="category">Web Development</span>
-                        <h2>The Rise of Headless CMS: A Developer's Perspective</h2>
-                        <p>Discover why decoupling your frontend from your backend is more than just a trend. We dive into the benefits of headless architecture, from enhanced performance to omnichannel content delivery.</p>
-                        <a href="posts/headless-cms-developers-perspective/index.html" class="btn btn-primary">Read Full Story</a>
-                    </div>
-                </div>
+    <div class="container">
+        <div class="featured-post-layout">
+            <div class="featured-image">
+                <img id="featured-image-src" src="" alt="Featured post image">
             </div>
-        </section>
+            <div class="featured-content">
+                <span id="featured-category" class="category"></span>
+                <h2 id="featured-title"></h2>
+                <p id="featured-description"></p>
+                <a id="featured-link" href="#" class="btn btn-primary">Read Full Story</a>
+            </div>
+        </div>
+    </div>
+</section>
 
         <section class="latest-posts-section">
             <div class="container">
