testing script src

--- a/blog.html
+++ b/blog.html
@@ -117,6 +117,7 @@
         </div>
     </footer>
 
+<script src="posts-data.js"></script>
 <script src="posts.js"></script>
 <script src="script.js"></script>
 
