added services section to index

--- a/index.html
+++ b/index.html
@@ -186,6 +186,66 @@
     </div>
 </section>
 
+        <section class="pricing-section">
+            <div class="container">
+                <div class="pricing-header">
+                    <h2>Plans and Pricing</h2>
+                    <p>Flexible solutions designed to scale with your business.</p>
+                    <div class="billing-toggle">
+                        <span class="toggle-option active">Monthly</span>
+                        <span class="toggle-option">Annual <span class="save-badge">SAVE 17%</span></span>
+                    </div>
+                </div>
+
+                <div class="pricing-grid">
+                    <div class="pricing-card" data-plan="waas">
+                        <div class="card-main-info">
+                            <h3>Website as a Service</h3>
+                            <div class="price-display" data-monthly-price="299">
+                                <span class="original-price"></span>
+                                <span class="current-price">$299</span>
+                                <span class="discount-badge">SAVE 17%</span>
+                            </div>
+                            <p class="price-term">Per month</p>
+                            <p class="card-description">For businesses & people wanting to grow</p>
+                        </div>
+                        <div class="card-features-action">
+                            <ul class="features-list">
+                                <li><span class="checkmark">✓</span>Custom Website Design & Build</li>
+                                <li class="subpoint"><span class="point">•</span> <p class="subpoint-p"> everything from Custom Site Build Plan </p></li>
+                                <li><span class="checkmark">✓</span>Secure Hosting & Domain</li>
+                                <li><span class="checkmark">✓</span>Ongoing Maintenance & Support</li>
+                                <li><span class="checkmark">✓</span>Basic SEO Setup</li>
+                                <li><span class="checkmark">✓</span>Up to 5 Pages</li>
+                            </ul>
+                            <a href="waas.html" class="btn btn-outline">Get started with WaaS</a>
+                        </div>
+                    </div>
+
+                    <div class="pricing-card dark-card">
+                        <div class="card-main-info">
+                            <h3>Custom Site Build</h3>
+                            <p class="price-term-custom">Starting at</p>
+                            <div class="price-tag-custom">$2500+</div>
+                            <p class="price-term">One time</p>
+                            <p class="card-description">For businesses & people who want a tailored site</p>
+                        </div>
+                        <div class="card-features-action">
+                            <ul class="features-list">
+                                <li><span class="checkmark">✓</span>Consultation</li>
+                                <li><span class="checkmark">✓</span>Ground-Up Static Site Development</li>
+                                <li><span class="checkmark">✓</span>Advanced Scalability Architecture</li>
+                                <li><span class="checkmark">✓</span>E-commerce & API Integrations</li>
+                                <li><span class="checkmark">✓</span>Backend Systems & Framework</li>
+                                <li><span class="checkmark">✓</span>Up to 2 Revision Rounds</li>
+                                <li><span class="checkmark">✓</span>Form Submission Integrations</li>
+                                <li><span class="checkmark">✓</span>Blog with Custom Backend</li>
+                            </ul>
+                            <a href="custom-build.html" class="btn btn-light">Get a Custom Build</a>
+                        </div>
+                    </div>
+            </section>
+
                 <section class="latest-posts-section">
                     <div class="container">
                         <div class="section-header">
