--- a/services.html
+++ b/services.html
@@ -100,6 +100,7 @@
                                 <li><span class="checkmark">✓</span>Backend Systems & Framework</li>
                                 <li><span class="checkmark">✓</span>Up to 2 Revision Rounds</li>
                                 <li><span class="checkmark">✓</span>Form Submission Integrations</li>
+                                <li><span class="checkmark">✓</span>Blog with Custom Backend</li>
                             </ul>
                             <a href="custom-build.html" class="btn btn-light">Get a Custom Build</a>
                         </div>
