Revert "changed to favicon.ico"
This reverts commit ac9147020013428cb0c789b20b847d94633c47df.

--- a/thank-you.html
+++ b/thank-you.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Message Sent - Aetheri Web Design</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="favicon.ico" sizes="48x48">
+    <link rel="icon" type="image/png" href="aetheriicon.ico" sizes="48x48">
     <style>
         .thank-you-container {
             text-align: center;
