changed footer and added newsletter form submission functionality

--- a/seo.html
+++ b/seo.html
@@ -148,14 +148,10 @@
         <div class="container">
             <div class="newsletter-section">
                 <h2>Join our newsletter and stay in the loop about the latest tech trends.</h2>
-                <form class="newsletter-form">
-                    <input type="email" placeholder="Enter Your Email">
+                <form class="newsletter-form" action="https://formspree.io/f/mqalrrwj" method="POST">
+                    <input type="email" placeholder="Enter Your Email" name="_replyto">
                     <button type="submit" class="btn btn-primary">SUBSCRIBE NOW!</button>
                 </form>
-                <div class="privacy-check">
-                    <input type="checkbox" id="privacy">
-                    <label for="privacy">*I have read the <a href="#">Privacy Policy</a> and agree to its terms.</label>
-                </div>
             </div>
 
             <div class="footer-bottom">
