--- a/contact.html
+++ b/contact.html
@@ -116,14 +116,10 @@
         <div class="container">
             <div class="newsletter-section">
                 <h2>Join our newsletter and stay in the loop about the latest tech trends.</h2>
-                <form class="newsletter-form">
-                    <input type="email" placeholder="Enter Your Email">
+                <form class="newsletter-form" action="https://formspree.io/f/mqalrrwj" method="POST">
+                    <input type="email" placeholder="Enter Your Email" name="_replyto">
                     <button type="submit" class="btn btn-primary">SUBSCRIBE NOW!</button>
                 </form>
-                <div class="privacy-check">
-                    <input type="checkbox" id="privacy">
-                    <label for="privacy">*I have read the <a href="#">Privacy Policy</a> and agree to its terms.</label>
-                </div>
             </div>
 
             <div class="footer-bottom">
@@ -147,7 +143,7 @@
         </svg>
     </a>
     <a href="https://www.linkedin.com/in/tyson-fitzgerald-6785801b5/" target="_blank" rel="noopener noreferrer" aria-label="Connect with us on LinkedIn">
-       
+        
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
             <path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.25 6.5 1.75 1.75 0 016.5 8.25zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93-.94 0-1.62.61-1.62 1.93V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.38 1.02 3.38 3.54z"></path>
         </svg>
