content changes, dev comment removal

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                             <h3>Website as a Service</h3>
                             <div class="price-display" data-monthly-price="299">
                                 <span class="original-price"></span>
-                                <span class="current-price">$299</span>
+                                <span class="current-price">$275</span>
                                 <span class="discount-badge">SAVE 17%</span>
                             </div>
                             <p class="price-term">Per month</p>
@@ -217,6 +217,7 @@
                                 <li><span class="checkmark">✓</span>Ongoing Maintenance & Support</li>
                                 <li><span class="checkmark">✓</span>Basic SEO Setup</li>
                                 <li><span class="checkmark">✓</span>Up to 5 Pages</li>
+                                <li><span class="checkmark">✓</span>Unlimited Edits</li>
                             </ul>
                             <a href="waas.html" class="btn btn-outline">Get started with WaaS</a>
                         </div>
@@ -237,7 +238,6 @@
                                 <li><span class="checkmark">✓</span>Advanced Scalability Architecture</li>
                                 <li><span class="checkmark">✓</span>E-commerce & API Integrations</li>
                                 <li><span class="checkmark">✓</span>Backend Systems & Framework</li>
-                                <li><span class="checkmark">✓</span>Up to 2 Revision Rounds</li>
                                 <li><span class="checkmark">✓</span>Form Submission Integrations</li>
                                 <li><span class="checkmark">✓</span>Blog with Custom Backend</li>
                             </ul>
