--- a/waas.html
+++ b/waas.html
@@ -82,7 +82,7 @@
                                 <li><span class="checkmark">✓</span>Fully Responsive for All Devices</li>
                                 <li><span class="checkmark">✓</span>Up to 5 Core Pages (e.g., Home, About)</li>
                                 <li><span class="checkmark">✓</span>Essential Features (Forms, Maps, etc.)</li>
-                                <li><span class="checkmark">✓</span>Up to 2 Rounds of Design Revisions</li>
+                                <li><span class="checkmark">✓</span>Unlimited Minor Content Edits</li>
                             </ul>
                         </div>
                         
@@ -110,7 +110,6 @@
                             <ul class="features-list">
                                 <li><span class="checkmark">✓</span>Proactive Content Management</li>
                                 <li><span class="checkmark">✓</span>Priority Support for Urgent Issues</li>
-                                <li><span class="checkmark">✓</span>Up to 2 Hours of Monthly Content Edits</li>
                                 <li><span class="checkmark">✓</span>Small Feature Additions & Integrations</li>
                                 <li><span class="checkmark">✓</span>24-hour response time for critical issues</li>
                             </ul>
