--- a/custom-build.html
+++ b/custom-build.html
@@ -61,8 +61,8 @@
                             <span class="detail-term">One-Time Payment</span>
                         </div>
                         <div class="detail-item">
-                            <span class="detail-title">Ownership</span>
-                            <span class="detail-value">You own all files</span>
+                            <span class="detail-title">Payment</span>
+                            <span class="detail-value">Lump sum</span>
                         </div>
                         <a href="contact.html" class="btn btn-primary">Request a Quote</a>
                     </div>
@@ -81,8 +81,10 @@
                                 <li><span class="checkmark">✓</span>Responsive Layout for All Devices</li>
                                 <li><span class="checkmark">✓</span>Up to 5 Pages (e.g., Home, About, Services)</li>
                                 <li><span class="checkmark">✓</span>Essential Functionality (Contact Form, Gallery)</li>
-                                <li><span class="checkmark">✓</span>Client provides all text and image content</li>
-                                <li><span class="checkmark">✓</span>Up to 2 Rounds of Design Revisions</li>
+                                <li><span class="checkmark">✓</span>Client provides image content</li>
+                                <li><span class="checkmark">✓</span>Up to 2 Rounds of Design Revisions ($50 / hour after)</li>
+                                <li><span class="checkmark">✓</span>Backend Functionality (Blog posting interface and form integrations as requested)</li>
+                                <li><span class="checkmark">✓</span>98-100 Google Speed Scores</li>
                             </ul>
                         </div>
                         <div class="feature-card">
