--- a/index.html
+++ b/index.html
@@ -206,18 +206,21 @@
                                 <span class="current-price">$275</span>
                                 <span class="discount-badge">SAVE 17%</span>
                             </div>
+                            <div>
+                                <span class="down-payment">($0 Down)</span>
+                            </div>
                             <p class="price-term">Per month</p>
                             <p class="card-description">For businesses & people wanting to grow</p>
                         </div>
                         <div class="card-features-action">
                             <ul class="features-list">
                                 <li><span class="checkmark">✓</span>Custom Website Design & Build</li>
-                                <li class="subpoint"><span class="point">•</span> <p class="subpoint-p"> everything from Custom Site Build Plan </p></li>
+                                <li class="subpoint"><span class="point">•</span> <p class="subpoint-p"> Everything from Custom Site Build Plan </p></li>
                                 <li><span class="checkmark">✓</span>Secure Hosting & Domain</li>
                                 <li><span class="checkmark">✓</span>Ongoing Maintenance & Support</li>
                                 <li><span class="checkmark">✓</span>Basic SEO Setup</li>
                                 <li><span class="checkmark">✓</span>Up to 5 Pages</li>
-                                <li><span class="checkmark">✓</span>Unlimited Edits</li>
+                                <li><span class="checkmark">✓</span>98-100 Google Speed Scores</li>
                             </ul>
                             <a href="waas.html" class="btn btn-outline">Get started with WaaS</a>
                         </div>
@@ -237,9 +240,10 @@
                                 <li><span class="checkmark">✓</span>Ground-Up Static Site Development</li>
                                 <li><span class="checkmark">✓</span>Advanced Scalability Architecture</li>
                                 <li><span class="checkmark">✓</span>E-commerce & API Integrations</li>
-                                <li><span class="checkmark">✓</span>Backend Systems & Framework</li>
-                                <li><span class="checkmark">✓</span>Form Submission Integrations</li>
-                                <li><span class="checkmark">✓</span>Blog with Custom Backend</li>
+                                <li><span class="checkmark">✓</span>Basic Backend Systems & Framework</li>
+                                <li class="subpoint"><span class="point-custom">•</span> <p class="subpoint-p"> Form Submission Integrations </p></li>
+                                <li class="subpoint"><span class="point-custom">•</span> <p class="subpoint-p"> Blog with Custom Backend </p></li>
+                                <li><span class="checkmark">✓</span>98-100 Google Speed Scores</li>
                             </ul>
                             <a href="custom-build.html" class="btn btn-light">Get a Custom Build</a>
                         </div>
