--- a/services.html
+++ b/services.html
@@ -67,6 +67,9 @@
                                 <span class="current-price">$275</span>
                                 <span class="discount-badge">SAVE 17%</span>
                             </div>
+                            <div>
+                                <span class="down-payment">($0 Down)</span>
+                            </div>
                             <p class="price-term">Per month</p>
                             <p class="card-description">For businesses & people wanting to grow</p>
                         </div>
@@ -78,6 +81,7 @@
                                 <li><span class="checkmark">✓</span>Ongoing Maintenance & Support</li>
                                 <li><span class="checkmark">✓</span>Basic SEO Setup</li>
                                 <li><span class="checkmark">✓</span>Up to 5 Pages</li>
+                                <li><span class="checkmark">✓</span>98-100 Google Speed Scores</li>
                             </ul>
                             <a href="waas.html" class="btn btn-outline">Get started with WaaS</a>
                         </div>
@@ -101,6 +105,7 @@
                                 <li><span class="checkmark">✓</span>Up to 2 Revision Rounds</li>
                                 <li><span class="checkmark">✓</span>Form Submission Integrations</li>
                                 <li><span class="checkmark">✓</span>Blog with Custom Backend</li>
+                                <li><span class="checkmark">✓</span>98-100 Google Speed Scores</li>
                             </ul>
                             <a href="custom-build.html" class="btn btn-light">Get a Custom Build</a>
                         </div>
