--- a/waas.html
+++ b/waas.html
@@ -58,7 +58,9 @@
                         <h3>Package at a Glance</h3>
                         <div class="detail-item">
                             <span class="detail-title">Pricing Model</span>
-                            <span class="detail-value-large">$299 / month</span>
+                            <span class="detail-value-large">$275 / month</span>
+                            <br>
+                            <span class="detail-value">$0 Down</span>
                         </div>
                         <div class="detail-item">
                             <span class="detail-title">Minimum Contract</span>
@@ -83,6 +85,7 @@
                                 <li><span class="checkmark">✓</span>Up to 5 Core Pages (e.g., Home, About)</li>
                                 <li><span class="checkmark">✓</span>Essential Features (Forms, Maps, etc.)</li>
                                 <li><span class="checkmark">✓</span>Unlimited Minor Content Edits</li>
+                                <li><span class="checkmark">✓</span>98-100 Google Speed Scores</li>
                             </ul>
                         </div>
                         
