--- a/thank-you.html
+++ b/thank-you.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Message Sent - Aetheri Web Design</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="assets/aetheriicon.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="aetheriicon.png" sizes="48x48">
     <style>
         .thank-you-container {
             text-align: center;
