resource heavy pngs changed to webp

--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="team-grid">
                     <div class="team-member-card">
-                        <img src="assets/headshot.png" alt="Photo of Tyson Fitzgerald">
+                        <img src="assets/headshot.webp" alt="Photo of Tyson Fitzgerald">
                         <div class="team-member-info">
                             <h4>Tyson Fitzgerald</h4>
                             <span>Founder & Developer</span>
