--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <nav class="main-nav container-nav">
     <div class="logo">
         <a href="index.html">
-            <img src="assets/aetherilogo.png" alt="Aetheri Web Design Logo">
+            <img src="assets/aetherilogo.webp" alt="Aetheri Web Design Logo">
         </a>
     </div>
 
@@ -166,7 +166,7 @@
     <div class="container mission-layout-with-image"> 
         
         <div class="mission-image-wrapper">
-            <img src="assets/headshot.png" alt="Photo of Tyson Fitzgerald">
+            <img src="assets/headshot.webp" alt="Photo of Tyson Fitzgerald">
             <div class="team-member-info-index">
                             <h4>Tyson Fitzgerald</h4>
                             <span>Founder & Developer</span>
